--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "10.19.0",
+    "npm": "6.14.4"
+  },
   "proxy": "http://localhost:8000",
   "eslintConfig": {
     "extends": [
